# bench_ped

./: .rtags  CMakeLists.txt  README.md
alp/manual/: CMakeLists.txt  bench_pde.cpp  bench_ped.cpp  test_ped.cpp
benchmark/: local.cmake
cengine/: local.cmake
cengine/datablock/schemes/: CScheme.cpp  CScheme.hpp  CSchemePicker.hpp  CSchemePool.cpp  DoubleSchemeType.cpp  DoubleSchemeType.hpp
cengine/datablock/schemes/v1/string/: OneValue.cpp
cengine/datablock/schemes/v2/double/: Decimal.cpp
cengine/datablock/schemes/v2/string/: DynamicDictionary.cpp
cengine/datablock/schemes/v2/templated/: DynamicDictionary.hpp  RLE.hpp
cengine/utils/: Utils.hpp
cmake/: clang-tidy.cmake
playground/: .dir-locals.el  local.cmake  pbi-double-columns-filtered.txt  pbi-double-columns.txt  pseudodecimal_benchmark.cpp
shared-headers/: Units.hpp
test/: local.cmake  tester.cpp
test/test-cases/: TestHelper.cpp  V2.cpp
toolchain/: example.cmake
tools/: local.cmake  r.bash  stats.py
tools/analysis/r-scripts/: dataset_distribution.r  dataset_distribution_compressed.r  estimation_deviation.r  overnight.r  sample_parameters.r  schemes_plugging.csv  schemes_plugging.r  total_compression_factor.r  total_compression_factor.tsv  tzt.r  varying_block_size.csv  varying_block_size.r  varying_sample_parameter.csv
tools/conversion/: bintocsv.cpp  decompression-speed.cpp  local.cmake
tools/datasets/stats/double-stats/: local.cmake
tools/datasets/stats/final/: all_double.ods  all_doubles.csv  all_integer.csv  all_integers.ods  all_string.ods  all_string_stats.csv  all_string_tmp.ods  brute_force_results.csv  bzip_doubles.csv  bzip_integers.csv  bzip_strings.csv  compression_ratio_analysis.ods  dict_before_after_tzt.ods  dict_sharing_compression_ratio_2.csv  integers_generico.csv  integers_generico.ods  lz4_double.csv  lz4_integer.csv  strings_size.csv  vardict_8_16_with_without_tzt.ods  xz.csv  xz.ods
tools/datasets/stats/final/raw/: db1_integers.csv  db2_integers.csv
tools/datasets/stats/integer-stats/: local.cmake
tools/datasets/stats/string-stats/: local.cmake
tools/engine-comparison/: note.txt
tools/mmapvector/: MMapvector.hpp  local.cmake
